<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/main_page" android:id="@+id/nav_main" android:icon="@drawable/ic_menu_camera"/>

        <item android:title="@string/self_info" android:id="@+id/self_info" android:icon="@drawable/ic_menu_camera"/>

        <item android:title="@string/people_management" android:id="@+id/nav_people_management" android:icon="@drawable/ic_menu_gallery" android:visible="true"/>

        <item android:title="@string/course_management" android:id="@+id/nav_course_management" android:icon="@drawable/ic_menu_gallery" android:visible="true"/>

        <item android:title="@string/student_schedule_page" android:id="@+id/nav_schedule_st" android:icon="@drawable/ic_menu_gallery"/>

        <item android:title="@string/instructor_schedule_page" android:id="@+id/nav_schedule_in" android:icon="@drawable/ic_menu_slideshow"/>

        <item android:title="@string/class_checkin" android:id="@+id/nav_checkin" android:icon="@drawable/ic_menu_manage"/>

        <item android:title="@string/studying_history" android:id="@+id/nav_studying_history" android:icon="@drawable/ic_menu_manage"/>

        <item android:title="@string/teaching_history" android:id="@+id/nav_teaching_history" android:icon="@drawable/ic_menu_manage"/>
    </group>

    <item android:title="Communicate">
        <menu>

        <item android:title="ออกจากระบบ" android:id="@+id/nav_log_out" android:icon="@drawable/ic_menu_send"/>

    </menu>
    </item>

</menu>
